Initial client implementation
Supports Company/VerificationRequest/Report operations with
the Truework API

https://truework.atlassian.net/browse/EN-1267

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,15 @@
 AllCops:
   TargetRubyVersion: 2.4
-Metrics/LineLength:
+Metrics:
+  Enabled: true
+  Exclude:
+    - lib/truework/request.rb
+Layout/LineLength:
   Max: 120
 Metrics/BlockLength:
   Enabled: true
   Exclude:
-    - test/**/*
+    - spec/**/*
+    - truework.gemspec
+Style/Documentation:
+  Enabled: false
