ci: add semantic release and a Github action to run it
This change uses npm to introduce semantic release and commitizen to enable easier releases in the
future.

API-46

--- a/.github/workflows/truework-sdk-ruby-ci.yml
+++ b/.github/workflows/truework-sdk-ruby-ci.yml
@@ -1,13 +1,12 @@
-name: Ruby
+name: CI
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
     branches: [ '**' ]
 
 jobs:
   test:
+    name: Pre-release
 
     runs-on: ubuntu-latest
 
@@ -21,7 +20,7 @@ jobs:
       run: gem install bundler
     - name: Run Setup
       run: ./bin/setup
-    - name: Robocop Check
+    - name: Lint
       run: rubocop
-    - name: Application Tests
+    - name: Test
       run: rake spec
