ci: add dry run to CI, add husky to run commitizen
This change adds a release dry run to the CI action.
Additionally, it adds husky and a prepare script to
automatically configure git hooks for commitizen.

--- a/.github/workflows/truework-sdk-ruby-ci.yml
+++ b/.github/workflows/truework-sdk-ruby-ci.yml
@@ -24,3 +24,14 @@ jobs:
       run: rubocop
     - name: Test
       run: rake spec
+    - name: Setup Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: 12
+    - name: Install Node.js dependencies
+      run: npm install
+    - name: Release (Dry Run)
+      env:
+        GEM_HOST_API_KEY: ${{ secrets.RUBYGEMS_AUTH_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: npm run release:dryRun
