--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "release": "semantic-release",
-    "release:dryRun": "semantic-release -d"
+    "release:dryRun": "semantic-release -d",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,8 @@
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "semantic-release": "^17.4.4",
-    "semantic-release-rubygem": "^1.2.0"
+    "semantic-release-rubygem": "^1.2.0",
+    "husky": "^6.0.0"
   },
   "release": {
     "plugins": [
